output/nimbus_dualmodel_1round_p4/foundry_validation/F-001_Swap_invariant_uses_a_10_000-based_fee_a/forge_stdout_attempt0.log
Compiler run failed:
Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x5C69bEe701ef814a2B6a3EDD4B1652CB9cc5aA6f". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x5C69bEe701ef814a2B6a3EDD4B1652CB9cc5aA6f". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:30:52:
   |
30 |     address internal constant UNISWAP_V2_FACTORY = 0x5C69bEe701ef814A2B6a3EDD4B1652CB9cc5aA6f;
   |                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

